[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mainlayer-webhooks"
version = "1.0.0"
description = "Webhook signature verification and event parsing for Mainlayer"
readme = {text = "mainlayer-webhooks Python library", content-type = "text/plain"}
license = { text = "MIT" }
authors = [{ name = "Mainlayer" }]
keywords = ["mainlayer", "webhooks", "payments", "hmac", "signature-verification"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://mainlayer.com"
Documentation = "https://docs.mainlayer.com/webhooks"
Repository = "https://github.com/mainlayer/mainlayer-python"

[tool.hatch.build.targets.wheel]
packages = ["src/mainlayer_webhooks"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -v"

[tool.coverage.run]
source = ["src/mainlayer_webhooks"]
omit = ["tests/*"]

[tool.mypy]
strict = true
python_version = "3.9"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "N"]
